--- a/src/app/pages/public/changepassword/changepassword.page.html
+++ b/src/app/pages/public/changepassword/changepassword.page.html
@@ -5,7 +5,7 @@
 <div class="bg-color">
   <!-- header title -->
   <div class="title">
-    <label class="title-text"> ENVIA MEJOR</label>
+    <label class="title-text" id="change-title"> ENVIA MEJOR</label>
   </div>
   <!-- overall div -->
   <div class="row" style="overflow:auto;height:100%">
@@ -13,14 +13,14 @@
     <div class="column"></div>
     <!-- section 2 -->
     <div class="column" style="text-align:center;padding-top: 25px;">
-      <p class="verify">Set Up your new pincode</p>
+      <p class="verify" id="setuppin">Set Up your new pincode</p>
       <!-- form starts -->
       <form #changepassword="ngForm" name="changepassword" novalidate>
           <form  class="digit-group" data-group-name="digits" data-autosubmit="false" autocomplete="off">
-              <input class="inputs" type="text"   class="inputs"/>
-              <input class="inputs" type="text"  class="inputs"/>
-              <input class="inputs" type="text" class="inputs" />
-              <input class="inputs" type="text"  class="inputs"/>
+              <input class="inputs" type="tel"  id="changePin1" class="inputs"/>
+              <input class="inputs" type="tel"  id="changePin2" class="inputs"/>
+              <input class="inputs" type="tel"  id="changePin3" class="inputs" />
+              <input class="inputs" type="tel"   id="changePin4" class="inputs"/>
               <p *ngIf="invalidOTP" style="color: red;text-align: -webkit-match-parent ;font-family: raleway_regular, Arial;"  >
                 <span>Invalid OTP !</span>
               </p>
@@ -28,26 +28,17 @@
           
             <p class="pincode">Enter new pincode</p>
           <form  class="digit-group1" data-group-name="digits" data-autosubmit="false" autocomplete="off">
-              <input class="inputs1" type="text"   class="inputs1"/>
-              <input class="inputs1" type="text"  class="inputs1"/>
-              <input class="inputs1" type="text" class="inputs1" />
-              <input class="inputs1" type="text"  class="inputs1"/>
+              <input class="inputs1" type="tel"   id="changeConfPin1" class="inputs1"/>
+              <input class="inputs1" type="tel"  id="changeConfPin2" class="inputs1"/>
+              <input class="inputs1" type="tel"  id="changeConfPin3"class="inputs1" />
+              <input class="inputs1" type="tel"  id="changeConfPin4" class="inputs1"/>
               <p *ngIf="invalidOTP" style="color: red;text-align: -webkit-match-parent ;font-family: raleway_regular, Arial;"  >
                 <span>Invalid OTP !</span>
               </p>
             </form>
-            <p class="pincode">Confirm pincode</p>
-         <!-- for new password input -->
-        <!-- <input type="text" name="newPass" class="form-control" placeholder="New pincode" autocomplete="off"  required [ngClass]="{'is-invalid':newPass.invalid  && submitted  ,'is-valid': newPass.valid  && submitted }" #newPass="ngModel" ngModel [(ngModel)]="changePasswordObj.newPass" />
-        <show-error [control]="newPass" [label]="{'labelName': 'New pincode'}" [submitFlag]="submitted"></show-error>
-        <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"  *ngIf="!submitted || newPass.valid"></svg> -->
-         <!-- for confirm password input -->
-        <!-- <input type="text" name="conPass" class="form-control" placeholder="Confirm pincode" autocomplete="off" required [ngClass]="{'is-invalid': 
-        conPass.invalid  && submitted  ,'is-valid': conPass.valid  && submitted }" #conPass="ngModel" ngModel [(ngModel)]="changePasswordObj.conPass" />
-        <show-error [control]="conPass" [label]="{'labelName': 'Confirm pincode'}" [submitFlag]="submitted"></show-error>
-        <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"  *ngIf="!submitted || conPass.valid"></svg> -->
-        <!-- for submit button -->
-        <button (click)="onSubmit(changepassword)">Submit</button>
+            <p class="pincode" id="conf-pin">Confirm pincode</p>
+         
+        <button (click)="onSubmit(changepassword)" id="change-submit">Submit</button>
       </form>
       <!-- end of form -->
       <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
