--- a/src/app/pages/public/forgotpassword/forgotpassword.page.html
+++ b/src/app/pages/public/forgotpassword/forgotpassword.page.html
@@ -5,7 +5,7 @@
 <div class="bg-color">
   <!-- header title -->
   <div class="title">
-    <label class="title-text"> ENVIA MEJOR</label>
+    <label class="title-text" id="forgot-pass-title"> ENVIA MEJOR</label>
   </div>
   <!-- overall div -->
   <div class="row" style="overflow:auto;height:100%;padding-right:15px;padding-left:15px;">
@@ -15,11 +15,12 @@
     <div class="column" style="text-align:center;padding-top: 25px;">
       <div class="bg-white">
         <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
-        <p class="verify">Forgot Pincode ?</p>
+        <p class="verify" id="forgot-pincode-label">Forgot Pincode ?</p>
         <!-- form starts -->
         <form #loginform="ngForm" name="loginform" novalidate>
           <!-- for phone number input -->
-          <input type="text" name="phone" class="form-control" placeholder="Phone Number" minlength="10" maxlength="15" pattern="[+][0-9]+" autocomplete="off" style="border-bottom: 1px solid #979797 !important" required
+          <input type="text" name="phone" class="form-control" placeholder="Phone Number" id="forgot-phone" minlength="10" maxlength="15" pattern="[+][0-9]+"
+           autocomplete="off" style="border-bottom: 1px solid #979797 !important" required
             [ngClass]="{
             'is-invalid':phone.invalid  && submitted  ,'is-valid': phone.valid  && submitted }" #phone="ngModel"
             ngModel [(ngModel)]="loginObj.phone" />
@@ -28,23 +29,23 @@
           <!-- for  Pincode input -->
           <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
           <form  class="digit-group" data-group-name="digits" data-autosubmit="false" autocomplete="off">
-            <input class="inputs" type="text" id="forgotInput1"  class="inputs" maxlength="1" autocomplete="off"/>
-            <input class="inputs" type="text" id="forgotInput2" class="inputs"  maxlength="1" autocomplete="off"/>
-            <input class="inputs" type="text" id="forgotInput3"  class="inputs" maxlength="1" autocomplete="off"/>
-            <input class="inputs" type="text" id="forgotInput4" class="inputs"  maxlength="1" autocomplete="off"/>
-            <input class="inputs" type="text" id="forgotInput5" class="inputs" maxlength="1" autocomplete="off"/>
-            <input class="inputs" type="text" id="forgotInput6" class="inputs" maxlength="1" autocomplete="off"/>
+            <input class="inputs" type="tel" id="forgotInput1"  class="inputs" maxlength="1" autocomplete="off"/>
+            <input class="inputs" type="tel" id="forgotInput2" class="inputs"  maxlength="1" autocomplete="off"/>
+            <input class="inputs" type="tel" id="forgotInput3"  class="inputs" maxlength="1" autocomplete="off"/>
+            <input class="inputs" type="tel" id="forgotInput4" class="inputs"  maxlength="1" autocomplete="off"/>
+            <input class="inputs" type="tel" id="forgotInput5" class="inputs" maxlength="1" autocomplete="off"/>
+            <input class="inputs" type="tel" id="forgotInput6" class="inputs" maxlength="1" autocomplete="off"/>
             <p *ngIf="invalidOTP" style="color: red;text-align: -webkit-match-parent ;font-family: raleway_regular, Arial;"  >
               <span>Invalid OTP !</span>
             </p>
           </form>
           <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
           <!-- for submit button -->
-          <span class="notes">Enter the Mobile number you used to join </span><br>
-          <span class="notes">Envia Mejor.You will get a text with a one-time</span><br>
-          <span class="notes">reference code to reset your pincode</span>
+          <span class="notes" id="note1">Enter the Mobile number you used to join </span><br>
+          <span class="notes" id="note2">Envia Mejor.You will get a text with a one-time</span><br>
+          <span class="notes" id="note3">reference code to reset your pincode</span>
           <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1" ></svg>
-          <button (click)="onSubmit(loginform)">Continue</button>
+          <button (click)="onSubmit(loginform)" id="continue">Continue</button>
         </form>
         <!-- end of form -->
         <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
