--- a/src/app/pages/public/settings/profile/profile.page.html
+++ b/src/app/pages/public/settings/profile/profile.page.html
@@ -5,7 +5,8 @@
             <p class="otherSet_Pro_New"><img src="assets/Icon material-arrow_back.png" alt="" align="top" style="cursor: pointer;"
                 (click)="settings()">
               &nbsp;
-              <span style="text-align: center">Profile</span></p>
+              <span style="text-align: center" id="title-profile">Profile</span></p>
+              &nbsp;&nbsp;&nbsp;&nbsp;<label class="tdLabelConf" style="float:right;padding-right: 20px;" (click)="onClickedit()" id="edit-profile">Edit</label><img style="float:right" src="assets/edit.png">
          <div style="text-align:center;">
                 <table class="tb1">
                         <tr>
