--- a/src/app/pages/public/thankyou/thankyou.page.html
+++ b/src/app/pages/public/thankyou/thankyou.page.html
@@ -1,7 +1,7 @@
 <div class="bg-color">
   <!-- header title -->
   <div class="title">
-    <label class="title-text"> ENVIA MEJOR</label>
+    <label class="title-text" id="thankyou-title"> ENVIA MEJOR</label>
   </div>
   <!-- overall div -->
   <div class="row" style="overflow:auto;height:100%">
@@ -9,16 +9,16 @@
     <div class="column"></div>
     <!-- section 2 -->
     <div class="column" style="text-align:center;padding-top: 100px;">
-      <span class="verify">Thank you for registering </span>
+      <span class="verify" id="thankyou-register">Thank you for registering </span>
       <br>
-      <span class="verify">with Envia Major </span>
+      <span class="verify" id="withEM">with Envia Major </span>
       <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
       <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
       <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
       <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
       <svg preserveAspectRatio="none" viewBox="0 -0.5 267 1" class="line-1"></svg>
         <!-- for submit button -->
-        <button (click)="onSubmit(changepassword)">Continue</button>
+        <button (click)="onSubmit(changepassword)" id="continue-thankyou">Continue</button>
     </div>
     <!-- section 3 -->
     <div class="column"></div>
