--- a/src/app/pages/public/sendmoneyconfirmation/sendmoneyconfirmation.page.html
+++ b/src/app/pages/public/sendmoneyconfirmation/sendmoneyconfirmation.page.html
@@ -2,24 +2,24 @@
     <div class="row" style="overflow:auto;height:100%">
         <!-- <div class="columnHome"></div> -->
         <div class="columnHome">
-                <div id="mySidenav" class="sidenav" *ngIf="openNavBar">
+                <div id="mySidenav" class="sidenav">
                         <span style="margin-top:10px;"><img src="assets/metro-home.png" style="cursor: pointer;" alt="" width="18"
-                                height="18" align="top" (click)="home()"><label class="margin20" (click)="home()">Home</label></span>
+                                height="18" align="top" (click)="home()"><label class="margin20" (click)="home()" id="homePageNav">Home</label></span>
                         <hr class="hr">
                         <span><img src="assets/paper-plane.png" style="cursor: pointer;" alt="" width="18" height="18" align="top"
-                                (click)="sendMoney()"><label class="margin20" (click)="sendMoney()">Send Money</label></span>
+                                (click)="sendMoney()"><label class="margin20" (click)="sendMoney()" id="sendMoneyPageNav">Send Money</label></span>
                         <hr class="hr">
                         <span><img src="assets/transaction.png" style="cursor: pointer;" alt="" width="18" height="18" align="top"
-                                (click)="transaction()"><label class="margin20" (click)="transaction()">Transactions</label></span>
+                                (click)="transaction()"><label class="margin20" (click)="transaction()" id="transactionPageNav">Transactions</label></span>
                         <hr class="hr">
                         <span><img src="assets/wallet.png" style="cursor: pointer;" alt="" width="18" height="18" align="top"
-                                (click)="wallet()"><label class="margin20" (click)="wallet()">Manage Wallet</label></span>
+                                (click)="wallet()"><label class="margin20" (click)="wallet()" id="manageWalletPageNav">Manage Wallet</label></span>
                         <hr class="hr">
                         <span><img src="assets/settings.png" style="cursor: pointer;" alt="" width="18" height="18" align="top"><label
-                                class="margin20" (click)="settings()">Settings</label></span>
+                                class="margin20" (click)="settings()" id="settingsPageNav">Settings</label></span>
                         <hr class="hr">
                         <span><img src="assets/logout.png" style="cursor: pointer;" alt="" width="18" height="18" (click)="settings()"
-                                align="top" (click)="logOut()"><label class="margin20" (click)="logOut()">Logout</label></span>
+                                align="top" (click)="logOut()"><label class="margin20" (click)="logOut()" id="logOutNav">Logout</label></span>
                     </div>
                 <!-- <div id="mySidenav" class="sidenav" style="position: absolute;">
                     <span><img src="assets/metro-home.png" style="cursor: pointer;" alt="" width="18" height="18" align="top" (click)="home()"><label
@@ -42,8 +42,8 @@
                     </div> -->
             <p class="otherSet_Pro_New"><img src="assets/icon_ionic_md_menu.png" alt="" align="top" style="cursor: pointer;padding-top: 3px;" (click)="openNav()">
                 &nbsp;
-                Transaction Details</p>
-            <p class="head1" style="text-align: center;">Your transaction is successful .</p>
+                <span id="transactionDet">Transaction Details</span></p>
+            <p class="head1" style="text-align: center;" id="transactionSuccess">Your transaction is successful .</p>
             <div style="text-align: -webkit-center;">
                 <div class="trans_1">
                     <p class="insideRound">ET</p>
@@ -54,10 +54,10 @@
             </div>
             <div class="clear"></div>
             <div id="viewpg" class="sendConf">
-                <table style="width:100%" *ngIf="firstPage">
+                <table style="width:100%">
                     <tr class="trspace_tran">
                         <td style="width:45%;padding-left: 10px;">
-                            <span class="tdLabelConf"> Paid To</span>
+                            <span class="tdLabelConf" id="paidTo"> Paid To</span>
                         </td>
                         <td style="width:55%">
                             <span class="tdDataConf"> Eric Thomson</span>
@@ -65,7 +65,7 @@
                     </tr>
                     <tr class="trspace_tran">
                         <td style="width:45%;padding-left: 10px;">
-                            <span class="tdLabelConf"> Date</span>
+                            <span class="tdLabelConf" id="dateConf"> Date</span>
                         </td>
                         <td style="width:55%">
                             <span class="tdDataConf">04 Dec 2019 3.30 PM</span>
@@ -73,7 +73,7 @@
                     </tr>
                     <tr class="trspace_tran">
                         <td style="width:45%;padding-left: 10px;">
-                            <span class="tdLabelConf"> Mobile Number</span>
+                            <span class="tdLabelConf" id="mobileNoConf"> Mobile Number</span>
                         </td>
                         <td style="width:55%">
                             <span class="tdDataConf">+1 907 769 3123</span>
@@ -81,7 +81,7 @@
                     </tr>
                     <tr class="trspace_tran">
                         <td style="width:45%;padding-left: 10px;">
-                            <span class="tdLabelConf"> Address</span>
+                            <span class="tdLabelConf" id="addressConf"> Address</span>
                         </td>
                         <td style="width:55%">
                             <span class="tdDataConf">830,River Street</span>
@@ -97,7 +97,7 @@
                     </tr>
                     <tr class="trspace_tran">
                         <td style="width:45%;padding-left: 10px;">
-                            <span class="tdLabelConf"> Vendor</span>
+                            <span class="tdLabelConf" id="vendorConf"> Vendor</span>
                         </td>
                         <td style="width:55%">
                             <span class="tdDataConf"> Money Gram</span>
@@ -105,7 +105,7 @@
                     </tr>
                     <tr class="trspace_tran">
                         <td style="width:45%;padding-left: 10px;">
-                            <span class="tdLabelConf"> Reference Code</span>
+                            <span class="tdLabelConf" id="refCodeCOnf"> Reference Code</span>
                         </td>
                         <td style="width:55%">
                             <span class="tdDataConf">85665565823</span>
@@ -113,7 +113,7 @@
                     </tr>
                     <tr class="trspace_tran">
                         <td style="width:45%;padding-left: 10px;">
-                            <span class="tdLabelConf"> Delivery Method</span>
+                            <span class="tdLabelConf" id="deliveryMethodDef"> Delivery Method</span>
                         </td>
                         <td style="width:55%">
                             <span class="tdDataConf">Cash Pickup</span>
@@ -121,7 +121,7 @@
                     </tr>
                     <tr class="trspace_tran">
                         <td style="width:45%;padding-left: 10px;">
-                            <span class="tdLabelConf"> Payment Method</span>
+                            <span class="tdLabelConf" id="paymentMethodConf"> Payment Method</span>
                         </td>
                         <td style="width:55%">
                             <span class="tdDataConf">Bank Account</span>
@@ -129,7 +129,7 @@
                     </tr>
                     <tr class="trspace_tran">
                         <td style="width:45%;padding-left: 10px;">
-                            <span class="tdLabelConf">Transaction Fee</span>
+                            <span class="tdLabelConf" id="transactionFeeConf">Transaction Fee</span>
                         </td>
                         <td style="width:55%">
                             <span class="tdDataConf">$100</span>
@@ -139,8 +139,8 @@
                 </table>
             </div>
             <div style="text-align: center;margin-top: 30px;">
-                <button  class="nextbtn !important"style="width: auto;height: 40.12px;display: inline-block !important"(click)="onClickSend()">Send Again</button>&nbsp;&nbsp;
-                <button  class="nextbtn !important"  style="display: inline-block;color:rgba(41, 39, 36, 1);width: auto;height: 40.12px;background-color: rgba(255, 195, 63, 1) !important" (click)="onClickMsg()">Send Message</button>
+                <button  class="nextbtn !important"style="width: auto;height: 40.12px;display: inline-block !important"(click)="onClickSend()" id="sendAgain">Send Again</button>&nbsp;&nbsp;
+                <button  class="nextbtn !important"  style="display: inline-block;color:rgba(41, 39, 36, 1);width: auto;height: 40.12px;background-color: rgba(255, 195, 63, 1) !important" (click)="onClickMsg()" id="sendMessageConf">Send Message</button>
             </div>
         </div>
         <!-- <div class="columnHome"></div> -->
